[build-system]
requires = [
    "setuptools>=42",
    "versioneer",
    "amulet-compiler-version@git+https://github.com/Amulet-Team/Amulet-Compiler-Version.git@3.0",
]
build-backend = "build_requires"
backend-path = [""]

[project]
name = "amulet-leveldb"
authors = [
    {name = "James Clare"},
]
description = "A pybind11 wrapper for Mojang's custom LevelDB."
dynamic = ["version", "readme", "dependencies"]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
docs = [
    "Sphinx>=1.7.4",
    "sphinx-autodoc-typehints>=1.3.0",
    "sphinx_rtd_theme>=0.3.1",
]
dev = [
    "setuptools>=42",
    "wheel",
    "pybind11==2.13.6",
    "Amulet-pybind11-extensions~=1.0",
    "versioneer",
    "black>=22.3",
    "pre_commit>=1.11.1",
    "isort",
    "autoflake",
    "mypy",
    "types-pyinstaller",
    "pybind11_stubgen"
]

[project.urls]
Homepage = "https://www.amuletmc.com"
Repository = "https://github.com/Amulet-Team/Amulet-LevelDB"
Issues = "https://github.com/Amulet-Team/Amulet-LevelDB/issues"

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
"*" = [
    "*Config.cmake",
    "**/*.hpp",
    "**/*.dll",
    "**/*.so",
    "**/*.dylib",
    "**/*.lib",
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/amulet/leveldb/_version.py"
versionfile_build = "amulet/leveldb/_version.py"
tag_prefix = ""
parentdir_prefix = "leveldb-"
