[build-system]
requires = [
    "setuptools>=42",
    "versioneer",
    "packaging",
]
build-backend = "build_requires"
backend-path = [""]

[project]
name = "amulet-leveldb"
authors = [
    {name = "James Clare"},
]
description = "A pybind11 wrapper for Mojang's custom LevelDB."
dynamic = ["version", "readme", "dependencies"]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "setuptools>=42",
    "versioneer",
    "packaging",
    "wheel",
    "amulet_pybind11_extensions~=1.0",
    "pybind11_stubgen>=2.5.4",
    "black>=22.3",
    "isort",
    "autoflake",
    "mypy",
    "types-pyinstaller",
]

[project.urls]
Homepage = "https://www.amuletmc.com"
Repository = "https://github.com/Amulet-Team/Amulet-LevelDB"
Issues = "https://github.com/Amulet-Team/Amulet-LevelDB/issues"

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
"*" = [
    "*Config.cmake",
    "**/*.hpp",
    "**/*.dll",
    "**/*.so",
    "**/*.dylib",
    "**/*.lib",
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[project.entry-points.pyinstaller40]
hook-dirs = "amulet.leveldb.__pyinstaller:get_hook_dirs"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/amulet/leveldb/_version.py"
versionfile_build = "amulet/leveldb/_version.py"
tag_prefix = ""
parentdir_prefix = "amulet_leveldb-"
