[metadata]
name = amulet-leveldb
url = https://www.amuletmc.com
author = James Clare
author_email = amuleteditor@gmail.com
classifiers=
    Programming Language :: Python :: 3
    Operating System :: OS Independent
description = A Cython wrapper for Mojang's custom LevelDB.
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any


[options]
packages = find:
zip_safe = False
python_requires = ~=3.6

[options.packages.find]
include = leveldb*

[options.extras_require]
docs =
    Sphinx>=1.7.4
    sphinx-autodoc-typehints>=1.3.0
    sphinx_rtd_theme>=0.3.1
dev =
    black>=22.3
    pre_commit>=1.11.1
    cython >= 3.0.0a9


[options.entry_points]
pyinstaller40 =
    hook-dirs = leveldb.__pyinstaller:get_hook_dirs


# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = leveldb/_version.py
versionfile_build = leveldb/_version.py
tag_prefix =
parentdir_prefix = leveldb-
