[metadata]
name = amulet-leveldb
url = https://www.amuletmc.com
author = James Clare
author_email = amuleteditor@gmail.com
classifiers=
    Programming Language :: Python :: 3
    Operating System :: OS Independent
description = A pybind11 wrapper for Mojang's custom LevelDB.
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any


[options]
packages = find_namespace:
package_dir =
    = src
python_requires = ~=3.10

[options.packages.find]
where = src
include =
    leveldb*

[options.package_data]
leveldb =
    *.pyi
    py.typed

[options.extras_require]
docs =
    Sphinx>=1.7.4
    sphinx-autodoc-typehints>=1.3.0
    sphinx_rtd_theme>=0.3.1
dev =
    black>=22.3
    pre_commit>=1.11.1
    mypy
    pybind11_stubgen @ git+https://github.com/Amulet-Team/pybind11-stubgen.git@c3a6ef67ec23d5a39e8cdc73b2c3cd8c1794d6f2
    isort
    autoflake


# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = src/leveldb/_version.py
versionfile_build = leveldb/_version.py
tag_prefix =
parentdir_prefix = leveldb-
